--- a/vagrant-setup/settings.yml
+++ b/vagrant-setup/settings.yml
@@ -1,22 +1,22 @@
 
-box: chef/debian-7.8
+box: debian/jessie64
 
 prefix_node: 'rozo'
 
-ram: 256
+ram: 128
 cpuexecutioncap: 25
 
 nb_nodes: 4
 
 # Private Networks
-networks: ['192.168.100.4']
+networks: ['10.0.0.']
 
 ## Devices Settings
 
 # Export device only on 2 first nodes
-export_device: { directory: './tmp', size: 40, ctrl: 'IDE Controller', port: 0, device: 1 }
+export_device: { directory: './tmp', size: 40, ctrl: 'SATA Controller', port: 1, device: 0 }
 
 # Storage devices on all nodes
 stor_devices: 
-- { directory: './tmp', size: 40, ctrl: 'IDE Controller', port: 1, device: 0 }
+- { directory: './tmp', size: 40, ctrl: 'SATA Controller', port: 2, device: 0 }
 
